editor (feature: #473): Deploy wvlet.org/wvlet/playground (#494)

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -24,12 +24,17 @@ concurrency:
 
 jobs:
   build:
-    name: Build Docusaurus
+    name: Build Website
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '23'
+          cache: sbt
       - uses: actions/setup-node@v4
         with:
           node-version: 18
@@ -38,9 +43,18 @@ jobs:
       - name: Install dependencies
         run: npm ci
         working-directory: ./website
-      - name: Build website
+      - name: Build Docusaurus
         run: npm run build
         working-directory: ./website
+      - name: Build playground
+        run: JVM_OPTS=-Xmx4g ./sbt "playground/fullLinkJS"
+      - name: Build playground web site
+        run: npm run build
+        working-directory: ./wvlet-ui-playground
+      - name: Copy playground web site to website
+        run: |
+          mkdir -p website/build/playground
+          cp -r wvlet-ui-playground/dist website/build/playground
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
