--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -40,12 +40,6 @@ jobs:
           node-version: 18
           cache: npm
           cache-dependency-path: ./website/package-lock.json
-      - name: Install dependencies
-        run: npm ci
-        working-directory: ./website
-      - name: Build Docusaurus
-        run: npm run build
-        working-directory: ./website
       - name: Build playground
         run: JVM_OPTS=-Xmx4g ./sbt "playground/fullLinkJS"
       - name: Build playground web site
@@ -53,8 +47,14 @@ jobs:
         working-directory: ./wvlet-ui-playground
       - name: Copy playground web site to website
         run: |
-          mkdir -p website/build/playground
-          cp -r wvlet-ui-playground/dist website/build/playground
+          rm -rf website/static/playground
+          cp -r wvlet-ui-playground/dist website/static/playground
+      - name: Install dependencies
+        run: npm ci
+        working-directory: ./website
+      - name: Build Docusaurus
+        run: npm run build
+        working-directory: ./website
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
