--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'website/**'
       - '.github/workflows/website.yml'
+      - 'wvlet-ui-playground/**'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
