interal: Run npm install before building playground

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -44,7 +44,9 @@ jobs:
       - name: Build playground
         run: JVM_OPTS=-Xmx4g ./sbt "playground/fullLinkJS"
       - name: Build playground web site
-        run: npm run build
+        run: |
+          npm install
+          npm run build
         working-directory: ./wvlet-ui-playground
       - name: Copy playground web site to website
         run: |
