--- a/.github/workflows/sdks.yaml
+++ b/.github/workflows/sdks.yaml
@@ -20,6 +20,9 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: unittest
-        run: python -m unittest
+      - name: Install dependencies
+        run: pip install pytest
+        working-directory: sdks/python
+      - name: Run tests
+        run: pytest
         working-directory: sdks/python
