--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,10 @@ updates:
     schedule:
       interval: "weekly"
   - package-ecosystem: "npm"
+    directory: "/wvlet-ui-playground"
+    schedule:
+      interval: "weekly"
+  - package-ecosystem: "npm"
     directory: "/website"
     schedule:
       interval: "weekly"
