--- a/wvlet-ui-playground/package.json
+++ b/wvlet-ui-playground/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@duckdb/duckdb-wasm": "^1.29.0",
+    "apache-arrow": "^18.1.0",
     "monaco-editor": "^0.52.0",
     "rollup": "^4.27.2"
   },
