--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -118,20 +118,13 @@ jobs:
           node-version: '18'
           cache: npm
           cache-dependency-path: ./wvlet-ui-main/package-lock.json
-      - name: Install npm dependencies for testing wvlet-ui
-        run: npm install
-      - name: Install npm dependencies for ui-main
-        run: npm install
-        working-directory: ./wvlet-ui-main
       - name: Install npm dependencies for ui-playground
         run: npm install
         working-directory: ./wvlet-ui-playground
       - name: Build Scala.js
         run: JVM_OPTS=-Xmx4g ./sbt "playground/fullLinkJS"
       - name: Build playground web site
-        run: |
-          npm install
-          npm run build
+        run: npm run build
         working-directory: ./wvlet-ui-playground
   test_native:
     name: Scala Native
