--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -41,6 +41,11 @@ jobs:
           node-version: 18
           cache: npm
           cache-dependency-path: ./website/package-lock.json
+      - name: Install npm dependencies for wvlet-ui
+        run: npm install
+      - name: Install npm dependencies for ui-main
+        run: npm install
+        working-directory: ./wvlet-ui-main
       - name: Install npm dependencies
         run: npm install
         working-directory: ./wvlet-ui-playground
