--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -117,7 +117,7 @@ jobs:
         with:
           node-version: '18'
           cache: npm
-          cache-dependency-path: ./wvlet-ui-main/package-lock.json
+          cache-dependency-path: '**/package-lock.json'
       - name: Install npm dependencies for testing wvlet-ui
         run: npm install
       - name: Install npm dependencies for ui-main
