--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           node-version: 18
           cache: npm
-          cache-dependency-path: ./website/package-lock.json
+          cache-dependency-path: '**/package-lock.json'
       - name: Install npm dependencies for wvlet-ui
         run: npm install
       - name: Install npm dependencies for ui-main
