internal: Auto-label breaking change PRs

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -38,6 +38,9 @@ template: |
 
 
 autolabeler:
+  - label: 'breaking'
+    title:
+      - '/breaking/i'
   - label: 'doc'
     files:
       - '*.md'
