--- a/wvlet-ui-playground/package.json
+++ b/wvlet-ui-playground/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@duckdb/duckdb-wasm": "^1.29.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.0",
     "apache-arrow": "^19.0.0",
     "monaco-editor": "^0.52.2",
     "rollup": "^4.32.0"
