--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,11 +10,7 @@ updates:
     schedule:
       interval: "weekly"
   - package-ecosystem: "npm"
-    directory: "/wvlet-ui-main"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/wvlet-ui-playground"
+    directory: "/"
     schedule:
       interval: "weekly"
   - package-ecosystem: "npm"
@@ -25,4 +21,4 @@ updates:
       # Grouping Docusaurus module updates into a single PR
       docusaurus:
         patterns:
-          - "@docusaurus/*"  
+          - "@docusaurus/*"
