--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -80,15 +80,9 @@ jobs:
         with:
           node-version: '18'
           cache: npm
-          cache-dependency-path: ./wvlet-ui-main/package-lock.json
-      - name: Install npm dependencies for testing wvlet-ui
+          cache-dependency-path: ./package-lock.json
+      - name: Install npm dependencies
         run: npm install
-      - name: Install npm dependencies for ui-main
-        run: npm install
-        working-directory: ./wvlet-ui-main
-      - name: Install npm dependencies for ui-playground
-        run: npm install
-        working-directory: ./wvlet-ui-playground
       - name: Scala.js test
         run: JVM_OPTS=-Xmx4g ./sbt "projectJS/test"
       - name: Packaging wvlet-cli
@@ -117,20 +111,13 @@ jobs:
         with:
           node-version: '18'
           cache: npm
-          cache-dependency-path: '**/package-lock.json'
-      - name: Install npm dependencies for testing wvlet-ui
+          cache-dependency-path: 'package-lock.json'
+      - name: Install npm dependencies
         run: npm install
-      - name: Install npm dependencies for ui-main
-        run: npm install
-        working-directory: ./wvlet-ui-main
-      - name: Install npm dependencies for ui-playground
-        run: npm install
-        working-directory: ./wvlet-ui-playground
       - name: Build Scala.js
         run: JVM_OPTS=-Xmx4g ./sbt "playground/fullLinkJS"
       - name: Build playground web site
-        run: npm run build
-        working-directory: ./wvlet-ui-playground
+        run: npm run build-playground
   test_native:
     name: Scala Native
     needs: changes
