--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -41,19 +41,12 @@ jobs:
           node-version: 18
           cache: npm
           cache-dependency-path: '**/package-lock.json'
-      - name: Install npm dependencies for wvlet-ui
-        run: npm install
-      - name: Install npm dependencies for ui-main
-        run: npm install
-        working-directory: ./wvlet-ui-main
       - name: Install npm dependencies
         run: npm install
-        working-directory: ./wvlet-ui-playground
       - name: Build playground
         run: JVM_OPTS=-Xmx4g ./sbt "playground/fullLinkJS"
       - name: Build playground web site
-        run: npm run build
-        working-directory: ./wvlet-ui-playground
+        run: npm run build-playground
       - name: Copy playground web site to website
         run: |
           rm -rf website/static/playground
