--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   "devDependencies": {
     "@rollup/plugin-replace": "^6.0.2",
     "autoprefixer": "^10.4.20",
+    "jsdom": "^24.0.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.2",
     "typescript": "^5.7.3",
     "vite": "^6.0.11",
-    "jsdom": "^24.0.0"
+    "vite-plugin-monaco-editor": "^1.1.0"
   }
 }
