fix: Disable Scala Native GC for dll to avoid Segmentaion Fault

--- a/wvc-lib/Makefile
+++ b/wvc-lib/Makefile
@@ -7,10 +7,10 @@ ARGS:="--help"
 test: $(OUT_DIR)/libwvlet.dylib rust c++ c
 
 test-select-rust:
-    $(MAKE) rust ARGS="-q 'select 1'"
+	$(MAKE) rust ARGS="-q 'select 1'"
 
 clean:
-    rm -rf $(TARGET)/test-* $(OUT_DIR)/*.a
+	rm -rf $(TARGET)/test-* $(OUT_DIR)/libwvlet*
 
 # check is Mac OS
 ifeq ($(shell uname),Darwin)
@@ -29,11 +29,11 @@ LIB_NAME:=wvlet
 LINKER_OPTS:=$(addprefix -L, $(subst :, ,$(LIB_DIRS))) -l$(LIB_NAME) -lpthread -lcrypto
 
 $(LIB_SHARED):
-    cd .. && ./sbt "wvcLib/nativeLink"
+	. && ./sbt "wvcLib/nativeLink"
 
 # Ensure the static library is built
 $(STATIC_LIB):
-    cd .. && ./sbt "wvcLib/nativeLinkStatic"
+	cd .. && ./sbt "wvcLib/nativeLinkStatic"
 
 # Add static library to the test targets
 test: $(OUT_DIR)/libwvlet.dylib $(STATIC_LIB) rust c++ c
@@ -42,24 +42,21 @@ test: $(OUT_DIR)/libwvlet.dylib $(STATIC_LIB) rust c++ c
 test: $(OUT_DIR)/libwvlet.dylib $(STATIC_LIB) rust c++ c
 
 rust: $(TARGET)/test-rust
-    $(RUN_OPTS) $< $(ARGS)
+	$(RUN_OPTS) $< $(ARGS)
 
 $(TARGET)/test-rust: src/test/rust/test.rs $(LIB) $(STATIC_LIB)
-    mkdir -p $(TARGET)
-    rustc $(LINKER_OPTS) $< -o $@
+	mkdir -p $(TARGET)
+	rustc $(LINKER_OPTS) $< -o $@
 
 c++: $(TARGET)/test-c++
-    $(RUN_OPTS) $< $(ARGS)
+	$(RUN_OPTS) $< $(ARGS)
 
 $(TARGET)/test-c++: src/test/c++/test.cpp
-    g++ $(LINKER_OPTS) $< -o $@
+	g++ $(LINKER_OPTS) $< -o $@
 
 c: $(TARGET)/test-c
-    $(RUN_OPTS) $< $(ARGS)
+	$(RUN_OPTS) $< $(ARGS)
 
 $(TARGET)/test-c: src/test/c/test.c
-    gcc $(LINKER_OPTS) $< -o $@
+	gcc $(LINKER_OPTS) $< -o $@
 
-# Clean both dynamic and static libraries
-clean:
-    rm -rf $(TARGET)/test-* $(OUT_DIR)/libwvlet.*
