--- a/.github/workflows/sdks.yaml
+++ b/.github/workflows/sdks.yaml
@@ -18,6 +18,8 @@ jobs:
             distribution: 'temurin'
             java-version: '23'
             cache: sbt
+        - name: Install Rust
+          run: rustup update
         - name: Install libgc
           run: sudo apt-get install libgc-dev
         - name: Build DLL
