--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -41,17 +41,21 @@ jobs:
 #          - os: macos-latest
 #            arch: arm64
 #            name: mac
+#            suffix: dylib
 # TODO It seems arm64 is not available yet (2024-11)
           - os: ubuntu-24.04-arm
             arch: arm64
             name: linux
+            suffix: so
           - os: ubuntu-latest
             arch: x64
             name: linux
+            suffix: so
 # TODO Need some tweaks to run sbt on Windows
 #          - os: windows-latest
 #            arch: x64
 #            name: windows
+#            suffix: dll
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -69,21 +73,19 @@ jobs:
           echo "SCALA_VERSION=$SCALA_VERSION" >> $GITHUB_ENV
       - name: Build native binary
         run: |
-          ./sbt 'wvc/nativeLinkReleaseFast'
-          cp wvc/target/scala-${{ env.SCALA_VERSION }}/wvc-release-fast \
-          wvc-${{ matrix.name }}-${{ matrix.arch }}
+          ./sbt 'wvcLib/nativeLinkReleaseFast'
       - name: Upload native binary
         uses: actions/upload-artifact@v4
         with:
-          name: wvc-${{ matrix.name }}-${{ matrix.arch }}
-          path: wvc-${{ matrix.name }}-${{ matrix.arch }}
+          name: ${{ matrix.name }}-${{ matrix.arch }}/libwvlet.${{ matrix.suffix }}
+          path: wvc-lib/target/scala-${{ env.SCALA_VERSION }}/libwvlet.${{ matrix.suffix }}
   collect_artifact:
-    name: Collect wvc binaries
+    name: Collect wvc dll
     runs-on: ubuntu-latest
     needs: build_native
     steps:
       - name: Merge artifacts
         uses: actions/upload-artifact/merge@v4
         with:
-          name: wvc-binaries
+          name: wvc-lib
           delete-merged: true
