--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -21,6 +21,8 @@ jobs:
           github-app-id: ${{ vars.APP_ID }}
           github-app-installation-id: ${{ secrets.APP_INSTALLATION_ID }}
           github-app-key: ${{ secrets.APP_PRIVATE_KEY }}
+          # Necessary to process only this repository
+          github-app-auth-only: true
           author-name: 'scala-steward'
           author-email: 'leo+bot@xerial.org'
           other-args: '--do-not-fork --add-labels'
