--- a/highlightjs-wvlet/package.json
+++ b/highlightjs-wvlet/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/wvlet/highlightjs-wvlet.git"
+    "url": "https://github.com/wvlet/wvlet.git"
   },
   "keywords": [
     "wvlet",
@@ -25,7 +25,7 @@
   "author": "Wvlet Contributors",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/wvlet/highlightjs-wvlet/issues"
+    "url": "https://github.com/wvlet/wvlet/issues"
   },
   "homepage": "https://wvlet.org",
   "peerDependencies": {
