internal: Align package structure with highlightjs-apex
- Follow the pattern of highlightjs-apex for package.json scripts
- Add mocha test for markup tests similar to apex
- Use 'should' assertion library as per apex example
- Keep dist files in repository as is standard for highlight.js packages
- Add proper test infrastructure with test/index.js and test/markup/index.js

--- a/highlightjs-wvlet/package.json
+++ b/highlightjs-wvlet/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Wvlet language syntax highlighting for highlight.js",
   "main": "src/languages/wvlet.js",
+  "scripts": {
+    "test": "mocha test --reporter spec",
+    "mocha": "mocha test/markup --reporter spec"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/wvlet/wvlet.git"
@@ -27,6 +31,8 @@
     "highlight.js": "^11.0.0"
   },
   "devDependencies": {
-    "highlight.js": "^11.0.0"
+    "highlight.js": "^11.0.0",
+    "mocha": "^11.7.1",
+    "should": "^13.2.3"
   }
 }
