feature: Add build script for generating dist files
- Add 'npm run build' command to package.json
- Create build.js that converts ES6 module to UMD format
- Generate both wvlet.js and wvlet.min.js in dist directory
- Simple minification by removing comments and collapsing whitespace

--- a/highlightjs-wvlet/package.json
+++ b/highlightjs-wvlet/package.json
@@ -5,7 +5,8 @@
   "main": "src/languages/wvlet.js",
   "scripts": {
     "test": "mocha test --reporter spec",
-    "mocha": "mocha test/markup --reporter spec"
+    "mocha": "mocha test/markup --reporter spec",
+    "build": "node build.js"
   },
   "repository": {
     "type": "git",
