fix: Use scoped NPM package name @wvlet/highlightjs-wvlet
- Change package name to @wvlet/highlightjs-wvlet for proper NPM organization scoping
- Update README examples to use the scoped package name
- Update CDN URLs to reflect the scoped package name

--- a/highlightjs-wvlet/package.json
+++ b/highlightjs-wvlet/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "highlightjs-wvlet",
-  "version": "1.0.0",
+  "name": "@wvlet/highlightjs-wvlet",
+  "version": "2025.1.12",
   "description": "Wvlet language syntax highlighting for highlight.js",
   "main": "src/languages/wvlet.js",
   "scripts": {
