--- a/.github/workflows/highlightjs.yml
+++ b/.github/workflows/highlightjs.yml
@@ -20,17 +20,13 @@ jobs:
   test:
     runs-on: ubuntu-latest
     
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-    
     steps:
     - uses: actions/checkout@v4
     
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 'latest'
         cache: 'npm'
         cache-dependency-path: highlightjs-wvlet/package-lock.json
     
@@ -67,7 +63,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '20.x'
+        node-version: 'latest'
         cache: 'npm'
         cache-dependency-path: highlightjs-wvlet/package-lock.json
     
@@ -118,7 +114,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '20.x'
+        node-version: 'latest'
         cache: 'npm'
         cache-dependency-path: highlightjs-wvlet/package-lock.json
     
