fix: Update CI workflow to use correct cache path
- Set cache-dependency-path to package-lock.json (relative to working-directory)
- Keep npm ci for reproducible builds
- Node.js cache will work correctly once package-lock.json exists

--- a/.github/workflows/highlightjs.yml
+++ b/.github/workflows/highlightjs.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         node-version: 'latest'
         cache: 'npm'
-        cache-dependency-path: highlightjs-wvlet/package-lock.json
+        cache-dependency-path: package-lock.json
     
     - name: Install dependencies
       run: npm ci
