fix: Exclude highlightjs-wvlet from main test workflow
- Add exclusion pattern for highlightjs-wvlet/** in test.yml filters
- Prevents main CI from running on highlight.js extension changes
- highlight.js extension has its own dedicated CI workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,7 @@ jobs:
               - '**.css'
               - '**.ts'
               - SCALA_VERSION
+              - '!highlightjs-wvlet/**'
   code_format:
     name: Code format
     needs: changes
