fix: Scope JS/HTML/CSS/TS filters to wvlet-* directories only
- Change generic **.js/html/css/ts patterns to wvlet-*/**.js/html/css/ts
- This excludes highlightjs-wvlet while including other wvlet modules
- Avoids path-filter negation issues

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,12 +28,11 @@ jobs:
               - '**.conf'
               - '**.json'
               - '**.wv'
-              - '**.js'
-              - '**.html'
-              - '**.css'
-              - '**.ts'
+              - 'wvlet-*/**.js'
+              - 'wvlet-*/**.html'
+              - 'wvlet-*/**.css'
+              - 'wvlet-*/**.ts'
               - SCALA_VERSION
-              - '!highlightjs-wvlet/**'
   code_format:
     name: Code format
     needs: changes
