fix: Scope JSON files to wvlet-* directories
- Change **.json pattern to wvlet-*/**.json
- Excludes package.json and other JSON files in highlightjs-wvlet
- Ensures main CI doesn't trigger on highlight.js extension changes

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
               - '**.scala'
               - '**.sbt'
               - '**.conf'
-              - '**.json'
+              - 'wvlet-*/**.json'
               - '**.wv'
               - 'wvlet-*/**.js'
               - 'wvlet-*/**.html'
