--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -85,6 +85,9 @@ jobs:
       (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')) ||
       (github.event_name == 'workflow_dispatch' && inputs.package == 'highlightjs-wvlet')
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: highlightjs-wvlet
     permissions:
       contents: read
       id-token: write
@@ -97,38 +100,33 @@ jobs:
         with:
           node-version: 'latest'
           registry-url: 'https://registry.npmjs.org'
+          cache: 'npm'
+          cache-dependency-path: highlightjs-wvlet/package-lock.json
       
       - name: Install dependencies
-        working-directory: highlightjs-wvlet
         run: npm ci
       
       - name: Build
-        working-directory: highlightjs-wvlet
         run: npm run build
       
       - name: Run tests
-        working-directory: highlightjs-wvlet
         run: npm test
       
       - name: Run markup tests
-        working-directory: highlightjs-wvlet
         run: npm run mocha
       
       - name: Set version from tag
         if: github.event_name == 'push'
-        working-directory: highlightjs-wvlet
         run: |
           VERSION=$(echo "${{ github.ref }}" | sed 's/refs\/tags\/v//')
           npm version $VERSION --no-git-tag-version
       
       - name: Set version from input
         if: github.event_name == 'workflow_dispatch'
-        working-directory: highlightjs-wvlet
         run: |
           npm version ${{ inputs.version }} --no-git-tag-version
       
       - name: Publish to NPM
-        working-directory: highlightjs-wvlet
         run: npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
