--- a/.github/workflows/highlightjs.yml
+++ b/.github/workflows/highlightjs.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: 'latest'
+        node-version: 22
         cache: 'npm'
         cache-dependency-path: package-lock.json
     
