--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -98,7 +98,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 'latest'
+          node-version: 22
           registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
           cache-dependency-path: highlightjs-wvlet/package-lock.json
