--- a/.github/workflows/highlightjs.yml
+++ b/.github/workflows/highlightjs.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         node-version: 22
         cache: 'npm'
-        cache-dependency-path: package-lock.json
+        cache-dependency-path: highlightjs-wvlet/package-lock.json
     
     - name: Install dependencies
       run: npm ci
